add actiontext features

--- a/app/views/blog_posts/_form.html.erb
+++ b/app/views/blog_posts/_form.html.erb
@@ -5,26 +5,26 @@
         <% end %>
     <% end %>
 
-    <div class="mb-3">
+    <div class="mb-4">
         <%= form.label :title, class: "form-label" %>
         <%= form.text_field :title, class: "form-control w-50" %>
     </div>
 
-    <div class="mb-3">
-        <%= form.label :body, class: "form-label" %>
-        <%= form.text_area :body, class: "form-control w-50" %>
+    <div class="mb-4">
+        <%= form.label :content, class: "form-label" %>
+        <%= form.rich_text_area :content, class: "form-control" %>
     </div>
 
     <% if user_signed_in? %>
-        <div class="mb-3">
+        <div class="mb-4">
             <%= form.label :published_at, class: "form-label" %>
             <div class="d-flex">
-                <%= form.datetime_select :published_at, { ampm: false, include_blank: true }, { class: "form-control me-2" } %>
+                <%= form.date_select :published_at, { include_blank: true }, { class: "form-control me-2" } %>
             </div>
         </div>
     <% end %>
 
-    <div class="mb-3">
+    <div class="mb-4">
         <%= form.submit "Create", class: "btn btn-primary px-4" %>
     </div>
 <% end %>
