--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -12,7 +12,7 @@
             <% end %>
         </div>
         <div class="card-body">
-            <p><%= blog.body.truncate(150, omission: "...") %></p>
+            <p><%= blog.content %></p>
         </div>
         <div class="p-2">
             <%= link_to "See more", blog, class: "btn btn-sm btn-primary" %>
