--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -19,3 +19,10 @@
         </div>
     </div>
 <% end %>
+
+<% if @pagy.count > @pagy.items %>
+    <div class="my-4">
+        <%== pagy_bootstrap_nav(@pagy) %>
+        <%== pagy_info(@pagy) %>
+    </div>
+<% end %>
