--- a/app/views/blog_posts/_form.html.erb
+++ b/app/views/blog_posts/_form.html.erb
@@ -25,6 +25,6 @@
     <% end %>
 
     <div class="mb-4">
-        <%= form.submit "Create", class: "btn btn-primary px-4" %>
+        <%= form.submit class: "btn btn-primary px-4" %>
     </div>
 <% end %>
